Improve background fetching for people age resolution
